--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,190 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.main-container{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+  height: 900px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@font-face {
+  font-family: "Kredit front";
+  src: url('./kredit front.ttf') format("truetype");
+}
+
+p{
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+}
+
+.card-body{
+width: 650px;
+height: 392px;
+background-image: url(http://tesseraguild.com/wp-content/uploads/2016/11/space-backgrounds-tumblr-hd-background-desktop.jpg);
+border-radius: 30px;
+margin: 0 60px;
+}
+
+.Title-section{
   display: flex;
-  flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 90px;
+  width: 650px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Title-section h1 {
+  margin: 20px 60px 0 0;
+  font-size: 45px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chipImage-style{
+  height: 90px;
+}
+
+.chip-section{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100px;
+  width: 650px;
+  padding-left: 60px;
+}
+
+.Data-section{
+  height: 200px;
+  width: 650px;
+  display: flex;
+}
+
+.serial-number-date{
+  width: 70%;
+  height: 100%;
+  color: white;
+  font-size: 35px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 50px;
+  font-weight: 600;
+}
+.card-number{
+  margin: 20px 0;
+  padding: 5px 10px 0;
+  height: 40px;
+  width: 93%;
+  background-color: rgba(239,253,95,0.2);
+  font-size: larger;
+  display: flex;
+  align-items: center;
+  font-family: Kredit front;
+  color: rgb(228,203,110)
+}
+
+.masterCard-visa{
+  display: flex;
+  width: 30%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo-section{
+  height: 125px;
+  width: 98px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo-style{
+  height: 63px;;
+}
+
+.logom-style{
+  height: 56px;
+}
+
+.pin-code{
+  display: flex;
+  font-size: 30px;
+  height: 80%;
+  margin-top: 12px;
+}
+
+.pin-date{
+  height: 30%;
+  width: 97%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+.cardholder-display{
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 10px;
+}
+
+.month-year{
+  font-size: 9px;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-right: 10px;
+}
+
+.date-display{
+  display: flex;
+  height: 100%;
+}
+
+.DATE-size{
+  font-size: 30px;
+}
+
+.date-section{
+  height: 100%;
+}
+
+.display-style{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  font-size: 9px;
+}
+
+.fa-caret-right{
+  font-size: 20px;
+  padding-left: 5px;
+}
+
+.separate{
+  margin-top: 100px;
+}
+
+.input{
+  display: flex;
+  flex-direction: column;
+  border: 0.5px solid grey;
+  width: 400px;
+  padding: 30px;
+  height: 320px;
+}
+
+input{
+  height: 30px;
+  margin: 20px 0;
+}
+
+.myPara-style{
+  height: 30px;
+  color: grey;
 }
